exports[`<Login/> snapshot progress bar behavior 1`] = `
<div
  className="row">
  <div
    className="col-sm" />
  <div
    className="col-sm-12 col-md-8 col-lg-8 jxwKTr">
    <form>
      <div
        className="input-group fluid">
        <input
          className="evyRiw"
          id="emailField"
          onChange={[Function]}
          placeholder="Email"
          type="email"
          value="" />
      </div>
      <div
        className="input-group fluid">
        <input
          className="evyRiw"
          id="passwordField"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value="" />
      </div>
      <div
        className="input-group fluid dRWiaS" />
      <div
        className="input-group fluid">
        <div
          className="mLiZo">
          <div
            className="spinner-donut" />
        </div>
      </div>
    </form>
  </div>
  <div
    className="col-sm" />
</div>
`;

exports[`<Login/> snapshot test 1`] = `
<div
  className="row">
  <div
    className="col-sm" />
  <div
    className="col-sm-12 col-md-8 col-lg-8 jxwKTr">
    <form>
      <div
        className="input-group fluid">
        <input
          className="evyRiw"
          id="emailField"
          onChange={[Function]}
          placeholder="Email"
          type="email"
          value="" />
      </div>
      <div
        className="input-group fluid">
        <input
          className="evyRiw"
          id="passwordField"
          onChange={[Function]}
          placeholder="Password"
          type="password"
          value="" />
      </div>
      <div
        className="input-group fluid dRWiaS" />
      <div
        className="input-group fluid">
        <input
          className="primary cklcwZ"
          id="submitButton"
          onClick={[Function]}
          type="submit"
          value="Submit" />
      </div>
    </form>
  </div>
  <div
    className="col-sm" />
</div>
`;
